--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "apic-docs",
   "version": "0.1.0",
   "main": "electron.js",
+  "scripts":{
+	"start": "gulp war"
+  },
   "devDependencies": {
     "fs": "0.0.2",
     "gulp": "^3.9.1",
